--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -93,7 +93,7 @@ header {
             }
             &:after {
               content: '\efec';
-              font-family: 'remixicon';
+              font-family: 'icomoon';
               position: absolute;
               top: 4px;
               left: 5.5rem;
@@ -119,7 +119,7 @@ header {
             padding-right: 20px;
             &:after {
               content: '\ebd9';
-              font-family: 'remixicon';
+              font-family: 'icomoon';
               position: absolute;
               right: 1px;
               top: 4px;
@@ -375,7 +375,7 @@ header {
       }
       button {
         content: '\f0d1';
-        font-family: 'remixicon';
+        font-family: 'icomoon';
         position: relative;
         width: 18px !important;
         height: 18px !important;
