--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -65,6 +65,7 @@
     height: 750px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
   }
   .diversity-right-area {
     padding-top: 3rem;
