--- a/src/scss/brand/components/green-bg-title/_index.scss
+++ b/src/scss/brand/components/green-bg-title/_index.scss
@@ -5,6 +5,7 @@
     width: 80%;
     position: relative;
     height: 100%;
+    white-space: nowrap;
     @extend .font-bold;
     @include sm {
       width: 100%;
