--- a/src/scss/brand/components/icons/_index.scss
+++ b/src/scss/brand/components/icons/_index.scss
@@ -4,8 +4,8 @@
   font-display: swap;
 }
 
-
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
@@ -24,125 +24,125 @@
   font-family: 'icomoon';
 }
 .icon-alert:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-angle-down:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-angle-left:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-angle-right:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-angle-top:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-arrow-down:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-arrow-left:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-arrow-right:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-arrow-top:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-arrow-top-right:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-cascade:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-chat:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-check:before {
-  content: "\e90c";
+  content: '\e90c';
 }
 .icon-clock:before {
-  content: "\e90d";
+  content: '\e90d';
 }
 .icon-close-line:before {
-  content: "\e90e";
+  content: '\e90e';
 }
 .icon-contrast-fill:before {
-  content: "\e90f";
+  content: '\e90f';
 }
 .icon-document:before {
-  content: "\e910";
+  content: '\e910';
 }
 .icon-download:before {
-  content: "\e911";
+  content: '\e911';
 }
 .icon-info:before {
-  content: "\e912";
+  content: '\e912';
 }
 .icon-lightbulb:before {
-  content: "\e913";
+  content: '\e913';
 }
 .icon-location:before {
-  content: "\e914";
+  content: '\e914';
 }
 .icon-mail:before {
-  content: "\e915";
+  content: '\e915';
 }
 .icon-menu-line:before {
-  content: "\e916";
+  content: '\e916';
 }
 .icon-mobile:before {
-  content: "\e917";
+  content: '\e917';
 }
 .icon-notification:before {
-  content: "\e918";
+  content: '\e918';
 }
 .icon-pause:before {
-  content: "\e919";
+  content: '\e919';
 }
 .icon-phone-line:before {
-  content: "\e91a";
+  content: '\e91a';
 }
 .icon-play:before {
-  content: "\e91b";
+  content: '\e91b';
 }
 .icon-plus:before {
-  content: "\e91c";
+  content: '\e91c';
 }
 .icon-search-line:before {
-  content: "\e91d";
+  content: '\e91d';
 }
 .icon-settings:before {
-  content: "\e91e";
+  content: '\e91e';
 }
 .icon-facebook2:before {
-  content: "\ea91";
+  content: '\ea91';
 }
 .icon-instagram:before {
-  content: "\ea92";
+  content: '\ea92';
 }
 .icon-whatsapp:before {
-  content: "\ea93";
+  content: '\ea93';
 }
 .icon-twitter:before {
-  content: "\ea96";
+  content: '\ea96';
 }
 .icon-vine:before {
-  content: "\ea97";
+  content: '\ea97';
 }
 .icon-vimeo2:before {
-  content: "\eaa1";
+  content: '\eaa1';
 }
 .icon-behance:before {
-  content: "\eaa8";
+  content: '\eaa8';
 }
 .icon-skype:before {
-  content: "\eac5";
+  content: '\eac5';
 }
 .icon-reddit:before {
-  content: "\eac6";
+  content: '\eac6';
 }
 .icon-linkedin:before {
-  content: "\eac9";
+  content: '\eac9';
 }
