--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -76,7 +76,7 @@ header {
       * {
         color: $color-grey-2;
       }
-      .contact--nav {
+      .header-icon-one {
         margin-left: 0 !important;
         margin-right: 1rem;
         p {
@@ -92,7 +92,7 @@ header {
               padding-right: 20px;
             }
             &:after {
-              content: '\efec';
+              content: '\e91a';
               font-family: 'icomoon';
               position: absolute;
               top: 4px;
@@ -105,7 +105,7 @@ header {
           }
         }
       }
-      .accessibility--nav {
+      .header-icon-two {
         text-align: right;
         margin-right: 0.5rem;
         p {
@@ -118,7 +118,7 @@ header {
             position: relative;
             padding-right: 20px;
             &:after {
-              content: '\ebd9';
+              content: '\e90f';
               font-family: 'icomoon';
               position: absolute;
               right: 1px;
@@ -359,7 +359,7 @@ header {
         height: auto;
         color: $color-black;
         background-size: 18px auto;
-        border: 1px solid var(--color-black);
+        border: 1px solid $color-black;
         background-repeat: no-repeat;
         transition: none !important;
         opacity: 1 !important;
@@ -497,7 +497,7 @@ header {
     }
   }
 }
-.megamenu--newco {
+.reference-megamenu {
   .megamenu-top-bar-right {
     p {
       &:after {
@@ -584,7 +584,7 @@ header {
   .simple-navigation .megamenu-top-bar-left {
     margin: 0 !important;
   }
-  .megamenu--newco .megamenu-top-bar-right .richText-content p,
+  .reference-megamenu .megamenu-top-bar-right .richText-content p,
   .megamenu-navigation
     .megamenu-top-bar-left
     > .component-content
@@ -599,7 +599,7 @@ header {
     p {
     min-height: 30px;
     display: inline-block;
-    color: var(--color-black) !important;
+    color: $color-black !important;
     font-size: 1rem !important;
     font-weight: 400 !important;
     line-height: 30px;
@@ -835,7 +835,7 @@ header {
   .megamenu-navigation {
     .megamenu--newco {
       .megamenu-top-bar-right {
-        .accessibility--nav p a {
+        .header-icon-two p a {
           padding-right: 0 !important;
         }
       }
@@ -844,7 +844,7 @@ header {
   .megamenu-navigation
     .megamenu--newco
     .megamenu-top-bar-right
-    .accessibility--nav
+    .header-icon-two
     p
     a:after {
     right: -1rem;
