--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -11,9 +11,11 @@
   textarea {
     width: 100%;
     height: 3rem;
-    border: 2px solid;
+    border: 2px solid $color-grey-3;
     padding: 0rem 1rem;
     margin-bottom: 1.75rem;
+    background-color: $color-grey-3;
+    color:$color-3 ;
   }
 
   textarea {
