--- a/src/scss/brand/components/green-bg-title/_index.scss
+++ b/src/scss/brand/components/green-bg-title/_index.scss
@@ -12,24 +12,24 @@
     }
     &:before {
       content: '';
-      width: 100%;
+      width: 100vw;
       background: var(--bg-color-2) !important;
       display: block;
       height: 100%;
       position: absolute;
-      left: -100%;
+      left: -100vw;
       top: 0;
 
       z-index: -1;
     }
     &:after {
       content: '';
-      width: 200%;
+      width: 100vw;
       background: var(--bg-color-2) !important;
       display: block;
       height: 100%;
       position: absolute;
-      right: -200%;
+      right: -100vw;
       top: -100%;
       z-index: -1;
     }
