--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -367,3 +367,29 @@
 //     }
 //   }
 // }
+.story-right-list {
+    .first{
+        @include md{
+            padding-right: 1.5rem;
+        }
+    }
+    .story-block {
+        display: flex;
+        margin-bottom: 1rem;
+        position: relative;
+        @include md{
+            height: 9.5rem;
+        }
+     .story-image {
+            width: 40%;
+            line-height: 0;
+        }
+        .story-content{
+            width: 60%;
+            padding: 1rem;
+            background-color: $color-white;
+            display: flex;
+            align-items: center;
+        }
+    }
+  }
