contact-form css change

--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -388,7 +388,9 @@
      .story-image {
             width: 40%;
             line-height: 0;
+         img{
             height: 100%;
+         }
         }
         .story-content{
             width: 60%;
