--- a/src/scss/brand/theme/_buttons.scss
+++ b/src/scss/brand/theme/_buttons.scss
@@ -72,7 +72,26 @@
       outline: 2px solid $color-primary !important;
     }
   }
+  &.btn-border-black {
+    background-color: $color-white;
+    border: 2px solid $color-2;
+    font-weight: $font-normal !important;
+    font-size: $font-size-18;
+    color: $color-2;
 
+    img {
+      filter: brightness(0) invert(1);
+    }
+
+    &:hover {
+      background-color: #484848 !important;
+      color: $color-white !important;
+    }
+
+    &:focus {
+      outline: 2px solid $color-primary !important;
+    }
+  }
   &.btn-pink {
     background-color: $color-secondary-pink;
     border: 2px solid $color-secondary-pink;
