--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -229,7 +229,7 @@
     .slick-dots li.slick-active {
       width: 8px;
       height: 32px;
-      background-color: var(--color-black);
+      background-color: $color-black;
     }
   }
 }
