--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -282,11 +282,12 @@ body {
 
   h1,
   .h1 {
-    color: $secondary-headings-color;
+    color: $primary-headings-color;
     font-family: $font-family-secondary;
     font-size: $font-size-h1-mobile;
     font-weight: $font-weight-h1;
     margin: 0 0 1rem 0;
+    line-height: $line-height-125;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-h1;
@@ -300,6 +301,7 @@ body {
     font-size: $font-size-h2-mobile;
     font-weight: $font-weight-h2;
     margin: 0 0 1rem 0;
+    line-height: $line-height-125;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-h2;
@@ -313,6 +315,7 @@ body {
     font-size: $font-size-h3-mobile;
     font-weight: $font-weight-h3;
     margin: 0 0 1rem 0;
+    line-height: $line-height-130;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-h3;
@@ -325,6 +328,7 @@ body {
     font-family: $font-family-secondary;
     font-size: $font-size-h4;
     font-weight: $font-weight-h4;
+    line-height: $line-height-150;
 
     @media (min-width: $breakpoint-sm-min) {
       //desktop styles
@@ -448,21 +452,6 @@ body {
   .row {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  img {
-    width: 100%;
-  }
-
-  img[src$='.svg'] {
-    width: 100%;
-  }
-
-  @media (min-width: $breakpoint-sm-min) and (max-width: $breakpoint-md-max) {
-    //desktop styles
-    img {
-      max-width: 100vw !important;
-    }
   }
 }
 
