--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -169,9 +169,9 @@
         line-height: 64px;
       }
     }
-    /* .percentage-content {
-      margin-top: 0 0 2.5rem 0;
-    } */
+    .percentage-box{
+      margin-bottom: 2.5rem;
+    }
   }
   .left-area {
     padding-top: 7rem;
@@ -224,6 +224,18 @@
 
 .small-font {
   font-size: o.75rem;
+}
+
+.small-cards{
+  margin-bottom: 2rem;
+  .card-content-wrapper {
+    .card-content{
+      padding: 1rem;
+      @include sd{
+        padding: 1rem 0.5rem;
+      }
+    }
+  }
 }
 
 /* Who we are */
