--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -51,19 +51,13 @@
 .half-carousel .lSSlideWrapper {
   overflow: visible;
 }
-.lSSlideOuter
-.lSSlideWrapper
-.lSAction
-a.lSPrev {
-content: '\e905';
-font-family: 'icomoon';
+.lSSlideOuter .lSSlideWrapper .lSAction a.lSPrev {
+  content: '\e905';
+  font-family: 'icomoon';
 }
-.lSSlideOuter
-.lSSlideWrapper
-.lSAction
-a.lSNext {
-content: '\e906';
-font-family: 'icomoon';
+.lSSlideOuter .lSSlideWrapper .lSAction a.lSNext {
+  content: '\e906';
+  font-family: 'icomoon';
 }
 // .template-standard-content-v2-profile
 //   .carousel-cq
