--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -625,6 +625,8 @@
             height: 48px;
             width: 48px;
             background-position: center;
+            text-align: center;
+            line-height: 48px;
           }
         }
         &:hover {
