add contact bg strip

--- a/src/scss/brand/components/green-bg-title/_index.scss
+++ b/src/scss/brand/components/green-bg-title/_index.scss
@@ -71,7 +71,38 @@
     }
   }
 }
-
+.bar-over-img{
+  content: '';
+    width: 100vw;
+    background: var(--bg-color-2) !important;
+    display: block;
+    height: 100%;
+    position: absolute;
+    right: -100vw;
+    top: 100%;
+    z-index: 1;
+@include md{
+  display: none;
+}
+}
+.healthcare-box{
+  padding-right: 0;
+  .heading-bg-strip{
+    margin: 0;
+  }
+}
+.image-bg-strip::after{
+   @include md{
+    background: var(--bg-color-2) !important;
+    position: absolute;
+    z-index: 1;
+    height: inherit;
+    content: '';
+    width: 100%;
+    height: 50px;
+    top: 46%;
+   }
+}
 /* .home-hero-content {
   .green-bar {
     height: 100px;
