--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -241,3 +241,18 @@
 }
 
 /* Who we are */
+
+.z-index-1 {
+  z-index: 1;
+}
+
+.img-bottom-btn .btn {
+  width: 100%;
+  justify-content: flex-start;
+}
+
+.img-bottom-btn .btn {
+width: 100%;
+justify-content: flex-start;
+}
+
