--- a/src/scss/brand/components/overlap-title/_index.scss
+++ b/src/scss/brand/components/overlap-title/_index.scss
@@ -27,7 +27,8 @@
     content: '\e907';
     font-family: 'icomoon';
     text-align: center;
-    line-height: 48px;
+    line-height: 72px;
+    font-size: 20px;
     background-color: $color-primary;
     // background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
     position: absolute;
