--- a/src/scss/brand/components/video/_index.scss
+++ b/src/scss/brand/components/video/_index.scss
@@ -62,6 +62,7 @@
   font-family: 'icomoon';
   text-align: center;
   line-height: 48px;
+  font-size: 20px;
   background-color: $color-primary;
   // background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
   position: absolute;
