--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -252,7 +252,10 @@
 }
 
 .img-bottom-btn .btn {
-width: 100%;
-justify-content: flex-start;
+  width: 100%;
+  justify-content: flex-start;
 }
 
+.width-100{
+  width: 100%;
+}
