--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -237,7 +237,7 @@
 }
 
 .small-font {
-  font-size: o.75rem;
+  font-size: 0.75rem;
 }
 
 /* Who we are */
@@ -256,6 +256,6 @@
   justify-content: flex-start;
 }
 
-.width-100{
+.width-100 {
   width: 100%;
 }
