--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -342,6 +342,7 @@ body {
     font-family: $font-family-primary;
     font-size: $font-size-body-mobile;
     font-weight: $font-weight-body;
+    line-height: $line-height-150;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-body;
@@ -393,9 +394,6 @@ body {
         width: auto;
         z-index: 999;
       }
-    }
-    img {
-      width: 100%;
     }
   }
 
@@ -477,6 +475,11 @@ body {
   a {
     color: inherit;
     text-decoration: none;
+  }
+}
+body {
+  img {
+    width: 100%;
   }
 }
 
