--- a/src/scss/brand/components/overlap-title/_index.scss
+++ b/src/scss/brand/components/overlap-title/_index.scss
@@ -40,6 +40,7 @@
     left: initial;
     height: 72px;
     width: 72px;
+    color: $color-2;
     background-position: center;
     outline: 2px solid $color-primary;
   }
