--- a/src/scss/brand/components/overlap-title/_index.scss
+++ b/src/scss/brand/components/overlap-title/_index.scss
@@ -23,7 +23,7 @@
 
 .bottom-right-arrow {
   position: relative;
-  &::after {
+  &::before {
     content: '\e907';
     font-family: 'icomoon';
     text-align: center;
