contact path add

--- a/src/scss/brand/components/green-bg-title/_index.scss
+++ b/src/scss/brand/components/green-bg-title/_index.scss
@@ -105,8 +105,8 @@
     height: inherit;
     content: '';
     width: 100%;
-    height: 5rem;
-    top: 46%;
+    height: 90px;
+    top: calc(11rem + 180px);
   }
 }
 /* .home-hero-content {
