--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -224,7 +224,6 @@
   }
 }
 
-
 .small-font {
   font-size: 0.75rem;
 }
@@ -251,4 +250,32 @@
 
 .width-auto img {
   width: auto;
+}
+
+.bg-grey-border {
+  .border-right {
+    border-bottom: solid rgba(0, 0, 0, 0) 2px;
+    border-right: none !important;
+
+    @include sm {
+      border-right: solid rgba(0, 0, 0, 0) 2px;
+      border-bottom: none !important;
+    }
+  }
+
+  .left-area {
+    padding-right: 0;
+
+    @include sm {
+      padding-right: 4.375rem !important;
+    }
+  }
+
+  .right-area {
+    padding-left: 0;
+
+    @include sm {
+      padding-left: 4.375rem !important;
+    }
+  }
 }
