--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -28,6 +28,17 @@
 
   select {
     border: 2px solid $color-grey-3;
+    appearance: none;
+    position: relative;
+    &:after {
+      content: '\e901';
+      font-family: 'icomoon';
+      position: absolute;
+      right: 0;
+      top: 0;
+      font-size: $font-size-16;
+      color: $color-2;
+    }
 
     option:hover {
       background-color: var(--bg-color-2);
