--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -8,6 +8,13 @@
       margin: 0;
     }
   }
+  .bottom-right-arrow {
+    &.arrow-size-48 {
+      &:after {
+        top: -50px;
+      }
+    }
+  }
 }
 
 // .leader-card-adjust {
